{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 30,
  "lineage": "49278dc6-c0dc-9439-83f1-10892f7d8371",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-application01",
            "location": "uksouth",
            "name": "nsg-woo-uks-application01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-cgm01",
            "location": "uksouth",
            "name": "nsg-woo-uks-cgm01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-database01",
            "location": "uksouth",
            "name": "nsg-woo-uks-database01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-jumphosts01",
            "location": "uksouth",
            "name": "nsg-woo-uks-jumphosts01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-trusted01",
            "location": "uksouth",
            "name": "nsg-woo-uks-trusted01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/networkSecurityGroups/nsg-woo-uks-webserver01",
            "location": "uksouth",
            "name": "nsg-woo-uks-webserver01",
            "resource_group_name": "rg-vnet-woolab01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "2.2.2.0/24",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/routeTables/UDRName/routes/udr-woo--uksbackend",
            "name": "udr-woo--uksbackend",
            "next_hop_in_ip_address": "2.2.2.10",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-vnet-woolab01",
            "route_table_name": "UDRName",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.1.1.0/24",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/routeTables/UDRName/routes/udr-woo--uksfrontend",
            "name": "udr-woo--uksfrontend",
            "next_hop_in_ip_address": "1.1.1.10",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-vnet-woolab01",
            "route_table_name": "UDRName",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/routeTables/UDRName",
            "location": "uksouth",
            "name": "UDRName",
            "resource_group_name": "rg-vnet-woolab01",
            "route": [
              {
                "address_prefix": "1.1.1.0/24",
                "name": "udr-woo--uksfrontend",
                "next_hop_in_ip_address": "1.1.1.10",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "2.2.2.0/24",
                "name": "udr-woo--uksbackend",
                "next_hop_in_ip_address": "2.2.2.10",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.16.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-activedirectory",
            "name": "sn-woo-uks-activedirectory",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-core01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.16.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-application01",
            "name": "sn-woo-uks-application01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-core01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.16.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-database01",
            "name": "sn-woo-uks-database01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-core01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-14",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.16.192/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-webserver01",
            "name": "sn-woo-uks-webserver01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-core01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-17",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-hub01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.128/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-cloudguardmgmt",
            "name": "sn-woo-uks-cloudguardmgmt",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-hub01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.32/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-firewall01",
            "name": "sn-woo-uks-firewall01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-hub01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.48/28"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-firewall02",
            "name": "sn-woo-uks-firewall02",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-hub01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-management01",
            "name": "sn-woo-uks-management01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-hub01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.112.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-application01",
            "name": "sn-woo-uks-application01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-preprod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-24",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.112.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-database01",
            "name": "sn-woo-uks-database01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-preprod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-25",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.112.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-webserver01",
            "name": "sn-woo-uks-webserver01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-preprod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-27",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.32.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-application01",
            "name": "sn-woo-uks-application01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-prod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-28",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.32.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-database01",
            "name": "sn-woo-uks-database01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-prod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-29",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.32.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-webserver01",
            "name": "sn-woo-uks-webserver01",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vnet-woolab01",
            "virtual_network_name": "vn-woo-uks-prod01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.16.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b2ebbfe-6d62-4eae-8c77-667fea90cf84",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01",
            "location": "uksouth",
            "name": "vn-woo-uks-core01",
            "resource_group_name": "rg-vnet-woolab01",
            "subnet": [
              {
                "address_prefix": "10.60.16.0/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-application01",
                "name": "sn-woo-uks-application01"
              },
              {
                "address_prefix": "10.60.16.128/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-activedirectory",
                "name": "sn-woo-uks-activedirectory"
              },
              {
                "address_prefix": "10.60.16.192/28",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-webserver01",
                "name": "sn-woo-uks-webserver01"
              },
              {
                "address_prefix": "10.60.16.64/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/subnets/sn-woo-uks-database01",
                "name": "sn-woo-uks-database01"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/23"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2eb0787a-65c0-47ab-aa35-3ff629b6eb5d",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01",
            "location": "uksouth",
            "name": "vn-woo-uks-hub01",
            "resource_group_name": "rg-vnet-woolab01",
            "subnet": [
              {
                "address_prefix": "10.60.0.0/27",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.60.0.128/27",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-cloudguardmgmt",
                "name": "sn-woo-uks-cloudguardmgmt"
              },
              {
                "address_prefix": "10.60.0.32/28",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-firewall01",
                "name": "sn-woo-uks-firewall01"
              },
              {
                "address_prefix": "10.60.0.48/28",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-firewall02",
                "name": "sn-woo-uks-firewall02"
              },
              {
                "address_prefix": "10.60.0.64/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01/subnets/sn-woo-uks-management01",
                "name": "sn-woo-uks-management01"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.112.0/25"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dcd893d1-47c4-46a1-9b66-d4ff5328940e",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01",
            "location": "uksouth",
            "name": "vn-woo-uks-preprod01",
            "resource_group_name": "rg-vnet-woolab01",
            "subnet": [
              {
                "address_prefix": "10.60.112.0/27",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-application01",
                "name": "sn-woo-uks-application01"
              },
              {
                "address_prefix": "10.60.112.32/27",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-database01",
                "name": "sn-woo-uks-database01"
              },
              {
                "address_prefix": "10.60.112.64/27",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-preprod01/subnets/sn-woo-uks-webserver01",
                "name": "sn-woo-uks-webserver01"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.32.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d8a43297-d574-40bf-8330-152ee1239414",
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01",
            "location": "uksouth",
            "name": "vn-woo-uks-prod01",
            "resource_group_name": "rg-vnet-woolab01",
            "subnet": [
              {
                "address_prefix": "10.60.32.0/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-application01",
                "name": "sn-woo-uks-application01"
              },
              {
                "address_prefix": "10.60.32.128/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-webserver01",
                "name": "sn-woo-uks-webserver01"
              },
              {
                "address_prefix": "10.60.32.64/26",
                "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-prod01/subnets/sn-woo-uks-database01",
                "name": "sn-woo-uks-database01"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-core01/virtualNetworkPeerings/peering-to-remote-vnet",
            "name": "peering-to-remote-vnet",
            "remote_virtual_network_id": "/subscriptions/d9d2ecd3-56a0-4f15-bae9-04b37c0d4335/resourceGroups/rg-vnet-woolab01/providers/Microsoft.Network/virtualNetworks/vn-woo-uks-hub01",
            "resource_group_name": "rg-vnet-woolab01",
            "use_remote_gateways": false,
            "virtual_network_name": "vn-woo-uks-core01"
          }
        }
      ]
    }
  ]
}